--- a/Projects/style.css
+++ b/Projects/style.css
@@ -99,6 +99,7 @@ body {
   font-family: 'Oswald', sans-serif;
   font-size: 7vw;
   cursor: pointer;
+  margin-top: -40vh;
 }
 #PLUS{
   position: fixed;
@@ -109,4 +110,23 @@ body {
   font-family: 'Oswald', sans-serif;
   font-size: 3vw;
   cursor: pointer;
+  z-index: 10000;
+}
+
+#more{
+  position: fixed;
+  top:100%;
+  left: 0;
+  border: 10px solid black;
+  width: 100%;
+  height: 100%;
+  transition: 1s;
+}
+
+#moins{
+  top: 50%;
+  left: 0;
+  width: 100%;
+  position: fixed;
+    transition: 1s;
 }
