--- a/Projects/style.css
+++ b/Projects/style.css
@@ -30,7 +30,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  image-rendering : auto;
+  image-rendering: auto;
 }
 
 .item.active {
@@ -94,14 +94,15 @@ body {
   float: right;
 }
 
-#title{
+#title {
   text-align: center;
   font-family: 'Oswald', sans-serif;
   font-size: 7vw;
   cursor: pointer;
   margin-top: -40vh;
 }
-#PLUS{
+
+#PLUS {
   position: fixed;
   bottom: 3vh;
   left: 50%;
@@ -113,16 +114,27 @@ body {
   z-index: 10000;
 }
 
-#more{
+#more {
   position: fixed;
-  top:100%;
+  top: 100%;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
+  max-height: 67vh;
+  overflow: auto;
   transition: 1s;
+  padding: 5px;
+  border-top: 7px solid #495057;
+  border-bottom: 7px solid #495057;
 }
 
-#moins{
+@media (orientation: portrait) {
+  #more {
+    height: 75vh;
+  }
+}
+
+#moins {
   top: 50%;
   left: 0;
   width: 100%;
@@ -130,13 +142,19 @@ body {
   transition: 1s;
 }
 
-#more{
-  padding-top: 10%;
+#more {
+  margin-top: 10%;
   font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-size: 20px;
+  text-align: center;
+  font-size: 20px;
 }
-#more a{
-   text-decoration:none;
-   font-weight: bold;
+
+#more a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+#more img{
+  width: 70%;
+  height: auto;
 }
