--- a/m/style.css
+++ b/m/style.css
@@ -95,6 +95,10 @@ h2 strong{
   top: 50%; left: 50%; /* à 50%/50% du parent référent */
   transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
 }
+.centerBox h1{
+	font-size: 1.6em;
+	white-space: nowrap;
+}
 .box{
 	width: 275px;
 	height: 275px;
