--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   background-image: url("pattern.svg");
   background-size: 220px;
   overflow-x: hidden; /* Hide horizontal scrollbar */
+  margin: 0;
 }
 html {
 	scroll-behavior: smooth;
@@ -53,6 +54,8 @@ a:hover{
   right: 3vh;
   font-size: 2em;
   transition: 0.1s;
+  z-index: 10000;
+  text-shadow: rgb(36, 36, 36) 0px 0 6px;
 }
 .butt:hover{
   font-size: 2.2em;
@@ -96,6 +99,7 @@ a:hover{
 }
 .imgPlanete{
   margin-top: -12vh;
+  height: 95vh;
 }
 
 .Page{
@@ -118,7 +122,7 @@ a:hover{
     width: 50%;
 }
 
-.leftPage{
+.leftPage, .textBlock{
   color: white;
 }
 .leftPage .center{
@@ -182,7 +186,7 @@ center{
 
 .normalBlock{
   font-size: 1.4em;
-  padding: 3vw;
+  padding: 1.2vw;
 }
 
 
@@ -203,4 +207,141 @@ body::-webkit-scrollbar-thumb
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #0d0d0d;
+}
+
+
+.video-container{
+  width: 100vw;
+  height: 100vh;
+}
+.background{
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: -3;
+  background-color: #202124;
+} 
+iframe {
+  position: absolute;
+  right: 0%;
+  width: 100vw;
+  height: calc(100vw / calc(16 / 9) );
+  z-index: -2;
+  box-shadow: 0 0 8px 8px white inset;
+  border-top: solid white 0.25rem;
+}
+.vignette{
+  position: absolute;
+  margin-top: 0.25rem;
+  background-image: url(https://www.nicepng.com/png/full/182-1822681_15-vignette-for-free-download-on-mbtskoudsalg-provence.png);
+  background-size: cover;
+  width: 100vw;
+  height: calc(calc(100vw / calc(16 / 9) ) - 0.25rem);
+  border-bottom: solid white 0.25rem;
+}
+.textBlock{
+  position: relative;
+  top: calc(calc(100vw / calc(16 / 9)) * 0.78);;
+  left: 50vw;
+  width: 60vw;;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  text-shadow: rgb(36, 36, 36) 0px 0 6px;
+}
+.normalBlock{
+  background-color: #2424249a;
+  backdrop-filter: blur(8px);
+}
+
+.btn{
+  margin-top: 0.5vw;
+}
+
+.obg iframe{
+  height: calc(100vw / calc(16 / 9) - 5vw);
+}
+
+.obg .vignette{
+  height: calc(calc(100vw / calc(16 / 9) - 5vw) - 0.25rem);
+}
+
+.obg .textBlock{
+  top: calc(calc(100vw / calc(16 / 9) - 5vw) * 0.78);;
+}
+
+
+#top{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000000;
+  text-shadow: rgb(36, 36, 36) 0px 0 6px;
+}
+
+
+
+
+
+@media (orientation: portrait) {
+  .navbar-collapse{
+    background-color: rgb(43, 43, 43);
+      padding-left: 2vw;
+      width: 20vw;
+  }
+  .iconsSociaux{
+    width: 25%;
+    zoom: 0.8;
+  }
+  .formSociaux{
+    text-align: center;
+  }
+  .Page .leftPage{
+    width: 100%;
+    translate: (0,0);
+    z-index: 4;
+  }
+  .Page .rightPage{
+    width: 100%;
+    transform: translate(0px,0);
+  }
+  .card-deck .card {
+    width: 20vh;
+    height: 20vh;
+    backdrop-filter: blur(4px);
+  }
+  .imgPlanete {
+    position: absolute;
+    top: -85vh;
+    transform: translate(0px,50%);
+    z-index: -1;
+    zoom: 0.8;
+  }
+  .title{
+    font-size: 5em;
+  }
+  .titleR{
+    font-size: 3em;
+  }
+  .textBlock{
+    position: inherit;
+    margin-top: calc(calc(100vw / calc(16 / 9)));;
+    left: 0vw;
+    width: 100vw;;
+    transform: translate(0%,0%);
+    text-align: center;
+    text-shadow: rgb(36, 36, 36) 0px 0 6px;
+  }
+  .obg .textBlock{
+    margin-top: calc(calc(100vw / calc(16 / 9) - 5vw));;
+  }
+  .normalBlock {
+    background-color: rgb(36, 36, 36);
+    margin: 2vw;
+    backdrop-filter: blur(0px);
+    font-size: 0.9em;
+  }
+  .video-container, .Page{
+    height: 100vw;;
+  }
 }
