--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
   background-size: 220px;
   overflow-x: hidden; /* Hide horizontal scrollbar */
   margin: 0;
+  font-family: 'Fira Sans', sans-serif;
 }
 html {
 	scroll-behavior: smooth;
@@ -280,6 +281,13 @@ iframe {
   text-shadow: rgb(36, 36, 36) 0px 0 6px;
 }
 
+@media (orientation: landscape) {
+  .formSociaux{
+    position: absolute;
+    right: 52vw;
+    transform: translate(0px,10%);
+  }
+}
 
 
 
@@ -354,4 +362,22 @@ iframe {
   .navbar {
     zoom: 1;
   }
+}
+
+
+footer{
+  border-top: solid white 0.25rem;
+  margin-top:  1rem;
+}
+
+.textBlockCenter{
+  width: 65vw;;
+  background-color: #202124;
+  color: white;
+  font-size: 1.2em;
+  text-align: center;
+  margin-left: 50%;
+  transform: translate(-50%,0);
+  padding: 2vw;;
+  border: solid white 0.25rem;
 }
