--- a/css/main.css
+++ b/css/main.css
@@ -618,3 +618,47 @@ Filename      : main.css
 .contactdetail{
     text-align: center;
 }
+/* Reset */
+*:before, *:after { content: ''; }
+hr {
+  border: 0;
+  margin: 1.35em auto;
+  max-width: 100%;
+  background-position: 50%;
+  box-sizing: border-box;
+}
+
+
+
+.bookends {
+    position: relative;
+    border-width: 5px;
+    border-color: rgb(0, 0, 0) transparent;
+    height: 11px;
+    border-style: double;
+    width: 80%;
+  }
+  
+  .bookends:before,
+  .bookends:after {
+    position: absolute;
+    bottom: -3.536px;
+    width: 7.071px;
+    height: 7.071px;
+    display: block;
+    border-width: 0 7.071px 7.071px 0;
+    border-color: rgb(0, 0, 0);
+    border-style: double;
+    box-sizing: border-box;
+  }
+  
+  .bookends:before {
+    transform: translateZ(0) rotate(-45deg);
+    left: -21px;
+  }
+  
+  .bookends:after {
+    transform: translateZ(0) rotate(135deg);
+    right: -21px;
+  }
+  
