--- a/css/main.css
+++ b/css/main.css
@@ -987,3 +987,85 @@ Filename      : main.css
     width: 177.78vh;
   }
 }
+
+.leftGamedesignService, .rightGamedesignService{
+    width: 100vw;;
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-position: center;
+    background-position-y:bottom;
+    background-size: cover;
+    margin: -1px;
+}
+
+.leftGamedesignService p, .rightGamedesignService p{
+    font-weight: 600;
+    font-size: 20px;;
+    width: auto;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 5px 20px;
+    color: #f2f2f2;
+}
+
+.backgroundCOntainText{
+    background-image: url(../asset/portfolio/background2.png);
+    width: 689px;
+    height: 290px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 105px;
+    margin: auto;
+    
+    position: absolute;
+    margin-left:50%;
+    margin-top: 50px;
+    transform: translate(-50%);
+    color: #f2f2f2;
+
+    text-align: center;
+    font-weight: 600;
+}
+.title{
+    margin-top: -5px;
+    font-size: 50px;;
+    text-transform: uppercase;
+    margin-bottom: -45px;
+    padding-bottom: 30px;
+}
+
+
+.selectedGamedesignService{
+    width: 110vw;;
+    text-align: center;
+    cursor: unset;
+}
+
+.leftGamedesignService{
+    background-image: url("../asset/portfolio/BOSSAttack\ .gif");
+
+}
+.rightGamedesignService{
+    background-image: url("../asset/portfolio/dodge2.gif");
+
+}
+
+.parralelogramme{
+    position: absolute;
+    margin-top: -10px;
+    height: 420px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 500px;
+    filter: invert(1);
+}
+
+#mainwrap{
+    margin-top: 120px;
+}
+
+#servicesection{
+    overflow: hidden;
+}
